--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <link type="text/css" href="../static/style.css" rel="stylesheet">
 </head>
 
-<body>
+<body onload="getData();">
     <div class="header">圖文留言板</div>
     <div class="wrap">
         <div class="edit">
